--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.6",
     "@vue/cli-service": "^3.0.0-beta.6",
+    "bootstrap": "^4.0.0",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-plugin-import": "^2.9.0",
