--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "highcharts": "^6.0.7",
     "normalize.css": "^8.0.0",
     "vue": "^2.5.13",
     "vue-meta": "^1.4.3",
