--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "highcharts": "^6.0.7",
     "normalize.css": "^8.0.0",
     "vue": "^2.5.13",
+    "vue-clickaway": "^2.2.2",
     "vue-meta": "^1.4.3",
     "vue-multiselect": "^2.0.8",
     "vue-router": "^3.0.1"
