--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --open",
+    "serve": "vue-cli-service serve --open --host 21184.c.hostens.cloud",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
