--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "highcharts": "^6.0.7",
+    "highcharts": "^7.1.2",
     "normalize.css": "^8.0.0",
     "v-tooltip": "^2.0.0-rc.31",
     "vue": "^2.5.13",
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.6",
-    "@vue/cli-service": "^3.0.0-beta.6",
-    "css-loader": "^0.28.10",
+    "@vue/cli-service": "^3.9.3",
+    "css-loader": "^3.1.0",
     "eslint": "^4.18.2",
     "eslint-plugin-import": "^2.9.0",
     "postcss-html": "^0.14.0",
